[gd_scene load_steps=10 format=2]

[ext_resource path="res://Components/ComponentsScripts/PortNot.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Not.png" type="Texture" id=3]
[ext_resource path="res://Fonts/FixedFont.otf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 4 )

[node name="PortNot" type="StaticBody2D" groups=["PortNot"]]
position = Vector2( 384, 160 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 56, 0 )
antialiased = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 40, 0 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 0 )
shape = SubResource( 3 )

[node name="Plug" type="Area2D" parent="."]
position = Vector2( 80, 0 )

[node name="Sprite" type="Sprite" parent="Plug"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1.66893e-05, -3.57628e-07 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plug"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = -32.0
margin_right = 80.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 5 )
align = 1

[node name="NOT" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 32.0
margin_right = 58.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 6 )
text = "NOT"
align = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="body_entered" from="Plug" to="." method="_on_Plug_body_entered"]
[connection signal="body_exited" from="Plug" to="." method="_on_Plug_body_exited"]
[connection signal="body_shape_entered" from="Plug" to="." method="_on_Plug_body_shape_entered"]
[connection signal="input_event" from="Plug" to="." method="_on_Plug_input_event"]
